--- a/daesh_plotting_sunni.Rmd
+++ b/daesh_plotting_sunni.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Daesh Plotting"
+title: "Daesh Plotting Sunni"
 output: html_notebook
 ---
 
@@ -28,10 +28,9 @@ arab4 <- read_spss("data/arab4.sav")
 ```{r}
 arab4 %<>%
   filter(q1012 == 1) %>%#only Muslims
-  mutate(sample = ifelse(is.na(sample) | sample == 1, 1, 2)) # %>% 
+  mutate(sample = ifelse(is.na(sample) | sample == 1, 1, 2)) %>%
+  filter(q1012a == 5) #%>%  #only sunni
 #  filter(sample != 2) #only non-refugees
-
-
 
 ```
 
@@ -155,13 +154,12 @@ daesh <- data %>%
   labs(caption = paste0("N = \t", n, ". Source: Arab Barometer 4 (2017)"), y = "Percent", x = NULL)
 
   
-ggsave(daesh, file = paste0("images/daesh_", cntry_fil,".png"), height = height, width = width)
+ggsave(daesh, file = paste0("images_sunni/daesh_", cntry_fil,".png"), height = height, width = width)
 
 return(daesh)
 }
 
-cntrys <- c("Algeria", "Jordan", "Lebanon", "Morocco", "Palestine", 
-"Tunisia", "Syrian Refugees")
+cntrys <- c("Algeria", "Lebanon", "Morocco", "Tunisia")
 
 for (jj in cntrys) {
   plot_daesh(arab4, jj, width = 19)
@@ -224,7 +222,7 @@ if (legend == F) {
   }
 
 if (save == T) {
-  ggsave(gg, file = paste0("images/goal_viol_", country, ".png"), 
+  ggsave(gg, file = paste0("images_sunni/goal_viol_", country, ".png"), 
          width = width, height = height)
   }
 
@@ -237,13 +235,11 @@ return(gg)
 #  plot_goal_viol(arab4, jj, save = T, width = 10, height = 5)
 #}
 
-goal_viol_alg <- plot_goal_viol(arab4, "Algeria", save = T, legend = T)
-goal_viol_jor <- plot_goal_viol(arab4, "Jordan", save = F, legend = F)
+goal_viol_alg <- plot_goal_viol(arab4, "Algeria", save = T, legend = T, labels = labels)
+
 goal_viol_leb <- plot_goal_viol(arab4, "Lebanon", save = F, legend = F)
 goal_viol_mor <- plot_goal_viol(arab4, "Morocco", save = F, legend = F)
-goal_viol_pal <- plot_goal_viol(arab4, "Palestine", save = F, legend = F, labels = labels)
 goal_viol_tun <- plot_goal_viol(arab4, "Tunisia", save = F, legend = F)
-goal_viol_ref <- plot_goal_viol(arab4, "Syrian Refugees", save = F, legend = F)
 
 grid_arrange_shared_legend <- function(...,
            ncol = length(list(...)),
@@ -294,19 +290,16 @@ grid_arrange_shared_legend <- function(...,
 }
 
 combined <- grid_arrange_shared_legend(
-  goal_viol_pal,
   goal_viol_alg, 
   goal_viol_leb,
   goal_viol_tun,
-  goal_viol_ref,
   goal_viol_mor,
-  goal_viol_jor,
-  ncol = 1, nrow = 7, 
+  ncol = 1, nrow = 4, 
   position = "bottom",
   title = "To what extent do you agree with 
   the goals of Daesh/ Daesh's use of violence?") 
 
-ggsave(combined, file = "images/combined.png", height = 12, width = 8)
+ggsave(combined, file = "images_sunni/combined.png", height = 12, width = 8)
 
 ```
 
@@ -366,7 +359,7 @@ if (legend == F) {
   }
 
 if (save == T) {
-  ggsave(gg, file = paste0("images/goal_viol_", country, ".png"), 
+  ggsave(gg, file = paste0("images_sunni/goal_viol_", country, ".png"), 
          width = width, height = height)
   }
 
@@ -379,13 +372,11 @@ return(gg)
 #  plot_goal_viol(arab4, jj, save = T, width = 10, height = 5)
 #}
 
-plot_islam_alg <- plot_islam(arab4, "Algeria", save = T, legend = T)
-plot_islam_jor <- plot_islam(arab4, "Jordan", save = F, legend = F)
+plot_islam_alg <- plot_islam(arab4, "Algeria", save = T, legend = T, labels = labels)
 plot_islam_leb <- plot_islam(arab4, "Lebanon", save = F, legend = F)
 plot_islam_mor <- plot_islam(arab4, "Morocco", save = F, legend = F)
-plot_islam_pal <- plot_islam(arab4, "Palestine", save = F, legend = F, labels = labels)
+
 plot_islam_tun <- plot_islam(arab4, "Tunisia", save = F, legend = F)
-plot_islam_ref <- plot_islam(arab4, "Syrian Refugees", save = F, legend = F)
 
 grid_arrange_shared_legend <- function(...,
            ncol = length(list(...)),
@@ -417,7 +408,7 @@ grid_arrange_shared_legend <- function(...,
         bottom = textGrob(
           paste0("N = \t", n, ". Source: Arab Barometer 4 (2017)"), x = 0.99, 
                       hjust = 1, gp = gpar(fontface = 3L, fontsize = 12)),
-        heights = unit.c(unit(0.9, "npc") - lheight, lheight)
+        heights = unit.c(unit(0.6, "npc") - lheight, lheight)
       ),
       "right" = arrangeGrob(
         do.call(arrangeGrob, gl),
@@ -436,19 +427,16 @@ grid_arrange_shared_legend <- function(...,
 }
 
 combined <- grid_arrange_shared_legend(
-  plot_islam_pal,
   plot_islam_alg, 
   plot_islam_leb,
   plot_islam_tun,
-  plot_islam_ref,
   plot_islam_mor,
-  plot_islam_jor,
   ncol = 1, nrow = 7, 
   position = "bottom",
   title = "To what extent do you believe Daesh’s tactics are
 compatible with the teachings of Islam?") 
 
-ggsave(combined, file = "images/compatible.png", height = 10, width = 10)
+ggsave(combined, file = "images_sunni/compatible.png", height = 10, width = 10)
 ```
 
 ## Threat to Country
@@ -475,9 +463,6 @@ dat <- data.frame(cntry = country,
 
 return(dat)
 }  
-
-cntrys <- c("Algeria", "Jordan", "Lebanon", "Morocco", "Palestine", 
-"Tunisia", "Syrian Refugees")
 
 threat_dat <- list()
 for (jj in cntrys) {
@@ -518,7 +503,7 @@ threat_cntry_pic <- threat_dat %>%
 #  guides(fill = guide_legend(keywidth = 4)) +
   theme_hc(base_size = 25)
 
-ggsave(threat_cntry_pic, file = "images/threat_cntry.png", width = 18, height = 10)
+ggsave(threat_cntry_pic, file = "images_sunni/threat_cntry.png", width = 18, height = 10)
 ```
 
 ## Threat to Region
@@ -543,10 +528,7 @@ dat <- data.frame(cntry = country,
                                    "No threat at all")))
 
 return(dat)
-}  
-
-cntrys <- c("Algeria", "Jordan", "Lebanon", "Morocco", "Palestine", 
-"Tunisia", "Syrian Refugees")
+}   
 
 threat_dat <- list()
 for (jj in cntrys) {
@@ -587,6 +569,6 @@ threat_reg_pic <- threat_dat %>%
 #  guides(fill = guide_legend(keywidth = 4)) +
   theme_hc(base_size = 25)
 
-ggsave(threat_reg_pic, file = "images/threat_reg.png", width = 18, height = 10)
+ggsave(threat_reg_pic, file = "images_sunni/threat_reg.png", width = 18, height = 10)
 ```
 
